--- a/Dynamic Site/views/error.html
+++ b/Dynamic Site/views/error.html
@@ -1,1 +1,1 @@
-<div id="error">{{errorMessage}}</div><img src="http://i.imgur.com/VKKm0pn.png" alt="Magnifying Glass" id="searchIcon">
+<div id="error">{{errorMessage}}</div>
